# objc-helpers

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Package.swift  README.md
.cmake/: install.cmake  objc-helpers-config.cmake.in  objc-helpers.pc.in
.github/workflows/: make-framework.yml  publish.yml  test.yml
.tools/: create-release.py  make-xcframework.py
doc/: CoDispatch.md
include/: BlockUtil.h  NSNumberUtil.h  NSObjectUtil.h  NSStringUtil.h  module.modulemap
include/objc-helpers/: BlockUtil.h  BoxUtil.h  CoDispatch.h  NSNumberUtil.h  NSObjectUtil.h  NSStringUtil.h  TestUtil.h  XCTestUtil.h
sample/: main.mm
sample/objc-helpers-sample.xcodeproj/: project.pbxproj
stub/: empty.cpp
test/: BlockUtilTest.cpp  BlockUtilTest.mm  BlockUtilTestCpp.cpp  BoxUtilTests.mm  CoDispatchTests.mm  CoDispatchTestsCpp.cpp  CoDispatchTestsNoexcept.cpp  Makefile  NSNumberUtilTests.mm  NSObjectUtilTests.mm  NSStringUtilTests.mm  NSStringUtilTestsCpp.cpp  TestGlobal.cpp  TestGlobal.h  TestUtilTests.mm  XCTestUtilTests.mm  main-linux.cpp  main.cpp  main.mm
test/test.xcodeproj/: project.pbxproj
test/test.xcodeproj/xcshareddata/xcschemes/: test.xcscheme
tools/: create-release.py
